<resources>
    <string name="app_name">FlickNest</string>
    <string name="image_todo">TODO</string>
    <string name="discover">Discover</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="overview">Overview</string>
    <string name="review">Review</string>
    <string name="no_review_yet">No Review Yet!</string>
    <string name="something_went_wrong">Something went wrong !</string>
    <string name="home">Home</string>
    <string name="genre">Genre</string>
    <string name="favorite">Favorite</string>
    <string name="most_populars">Most Populars</string>
    <string name="see_more">See More</string>
    <string name="explore">Explore</string>
    <string name="trending">Trending</string>
    <string name="title_favorite">Favorite</string>
    <string name="search_movie">Search Movie</string>
    <string name="module_not_found">Module not found</string>
    <string name="error_installing_module">Error installing module</string>
</resources>