<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_080c1f">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back_white" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/contentView"
        android:layout_below="@id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="180dp"
                android:contentDescription="@string/image_todo"
                android:src="@drawable/bg_splash"
                app:strokeColor="@null"
                app:shapeAppearanceOverlay="@style/RoundedSquare"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/app_name" />

            <TextView
                android:id="@+id/tvDateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                tools:text="Jan 26, 2024" />

            <TextView
                android:id="@+id/tvVote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/tvDateTime"
                tools:text="User Score 52/100" />

            <TextView
                android:id="@+id/tvQuote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toTopOf="@+id/icFavorite"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/tvVote"
                tools:text="One last hund to save us all" />

            <ImageView
                android:id="@+id/icFavorite"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_unfavorite_white"
                android:layout_margin="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvTrailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView">

                <LinearLayout
                    android:orientation="vertical"
                    android:background="@color/color_151d3e"
                    android:padding="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:text="@string/play_trailer"
                        app:drawableStartCompat="@drawable/ic_arrow_right_white" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvTrailer"
                android:text="@string/overview" />

            <TextView
                android:id="@+id/tvOverview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/overview"
                tools:text="After a deadly earthquake turns Seoul into a lawless badland, a fearless huntsman springs into action to rescue a teenager abducted by a mad doctor." />

            <TextView
                android:id="@+id/review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvOverview"
                android:text="@string/review" />

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swipeRefreshLayout"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/review">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvListReview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:visibility="gone"
                        tools:itemCount="3"
                        tools:listitem="@layout/item_list_review" />

                    <TextView
                        android:id="@+id/tvEmpty"
                        android:text="@string/no_review_yet"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/contentError"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:visibility="gone"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/error_404"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/image_todo" />

        <TextView
            android:text="@string/something_went_wrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/errorMessage"
            android:text="@string/something_went_wrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="4dp"
            android:textColor="@color/white"
            android:textSize="12sp"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        tools:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

</RelativeLayout>