<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/color_080c1f">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivMostPopular"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/image_todo"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_margin="16dp"
                    android:text="@string/explore"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/tvTitleMovie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/tvTagLine"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/tvTagLine"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="Jumanji" />

                <TextView
                    android:id="@+id/tvTagLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/tvDateTime"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="Welcome to the jungle" />

                <TextView
                    android:id="@+id/tvDateTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="16dp"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="December 2023" />

                <ImageView
                    android:id="@+id/ivPlayTrailer"
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:src="@drawable/ic_play_button"
                    android:contentDescription="@string/image_todo"
                    android:layout_margin="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_margin="16dp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/trending"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvSeeMoreTrending"
                    android:text="@string/see_more"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMostTrending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                tools:listitem="@layout/item_list_most_popular"
                tools:itemCount="1"/>

            <LinearLayout
                android:layout_margin="16dp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/most_populars"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvSeeMoreMostPopular"
                    android:text="@string/see_more"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMostPopulars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                tools:listitem="@layout/item_list_most_popular"
                tools:itemCount="1"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>